--- a/report/templates/amr_report.html
+++ b/report/templates/amr_report.html
@@ -160,6 +160,10 @@
         </div>
     </div>
     <div class="section">
+        <h2>Mutation Frequency Analysis</h2>
+        <div id="mutationFrequencyChart" style="width:100%;height:500px;"></div>
+    </div>
+    <div class="section">
         <h2>Pipeline Statistics</h2>
         <pre>{{ stats | tojson(indent=2) | e }}</pre>
     </div>
@@ -182,6 +186,9 @@
                 "responsive": true
             });
         });
+    </script>
+    <script>
+        {{ plotly_script|safe }}
     </script>
 </body>
 </html>
